[package]
name = "graph-cluster-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Data processing
arrow = "54.0.0"
parquet = "54.0.0"
polars = { version = "0.46.0", features = ["parquet", "lazy"] }

# Parallelism
rayon = "1.8.0"
crossbeam = "0.8.2"
dashmap = "5.5.3"

# GPU acceleration (disabled)

# Graph processing
petgraph = "0.6.4"

# Memory management
memmap2 = "0.9.0"
bumpalo = "3.14.0"

# Serialization and storage
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
bincode = "1.3.3"

# Error handling
thiserror = "1.0.50"
anyhow = "1.0.75"

# Utilities
itertools = "0.12.0"
bytes = "1.5.0"
ndarray = "0.15.6"
num_cpus = "1.16.0"
statrs = "0.16.0"

# Logging and diagnostics
log = "0.4.20"
env_logger = "0.10.1"
tracing = "0.1.40"

# CLI
clap = { version = "4.4.8", features = ["derive"] }

[build-dependencies]
cc = "1.0.83"